--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ New folder/.gitignore
 New folder/.project
 New folder/.classpath
 New folder/.settings/org.eclipse.jdt.core.prefs
+lab1_1/.project
+lab1_1/.gitignore
+lab1_1/.classpath
