--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ New folder/.settings/org.eclipse.jdt.core.prefs
 lab1_1/.project
 lab1_1/.gitignore
 lab1_1/.classpath
+lab2/.classpath
+lab2/.gitignore
+lab2/.project
